--- a/statistics.html
+++ b/statistics.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://odum.unc.edu/2019/10/statsconsultant-job/'>Part-time Job Opening: Statistical Consultant?(Spring 2020) - The Odum Institute</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://odum.unc.edu/2019/10/statsconsultant-job/'>Part-time Job Opening: Statistical Consultant?(Spring 2020) - The Odum Institute</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -161,7 +161,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -228,7 +228,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p>Oct 8, 2019 ... Applicants must have a PhD degree in mathematics, statistics, bio-statistics, data 
 science, or a related area by the time of appointment. Successful candidates?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mathjobs.org/jobs/jobs/14907'>California State University, Chico, Department of Math and Statistics </a></h5> 
+<h5><a href='https://www.mathjobs.org/jobs/jobs/14907'>California State University, Chico, Department of Math and Statistics </a></h5> 
 <p><span class="badge badge-light">California California California United States</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -236,7 +236,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 ??. ????? ... Participate in statistical support for CRF design, database development, data 
 validation plan and blinded data review; - Performs SAS programming to 
@@ -289,7 +289,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.uic.edu/job-board/job-details?jobID=120384'>Job Details: Tenured/Tenure-Track Faculty - Business Statistics/Analytics</a></h5> 
+<h5><a href='https://jobs.uic.edu/job-board/job-details?jobID=120384'>Job Details: Tenured/Tenure-Track Faculty - Business Statistics/Analytics</a></h5> 
 <p><span class="badge badge-light">Chicago Rockford  Chicago</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -346,7 +346,7 @@ created School of Data Science, and other departments and schools. Faculty?...</
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7F688A9EE8'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7F688A9EE8'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -393,7 +393,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='http://favortechconsulting.applytojob.com/apply/r9pLSukRw0/MathematicianStatistician'>Mathematician/Statistician - Favor TechConsulting - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://favortechconsulting.applytojob.com/apply/r9pLSukRw0/MathematicianStatistician'>Mathematician/Statistician - Favor TechConsulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -405,7 +405,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-client-dedicated-31304'>Sr Statistical Programmer - Client Dedicated - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-client-dedicated-31304'>Sr Statistical Programmer - Client Dedicated - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -413,7 +413,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.leeds.ac.uk/vacancy.aspx?ref=MHCTR1172'>
+<h5><a href='https://jobs.leeds.ac.uk/vacancy.aspx?ref=MHCTR1172'>
 	MHCTR1172 Medical Statistician - Jobs at the University of Leeds
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -467,11 +467,11 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-31265'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-31265'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
